# eigen-qld

./: CMakeLists.txt  README.md  package.xml
include/eigen-qld/: QLD.h  QLDDirect.h
src/: QLD.cpp  QLDDirect.cpp
test/: QPTest.cpp
